# swarmic-agents

./: .python-version  README.md  pyproject.toml
swarmic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
swarmic_agents/: chat.py  codebase.md  test_chat.py
swarmic_agents/agents/: system-prompt.md
swarmic_agents/agents/architect/: SKILL.md
swarmic_agents/chat/: __init__.py  chat.py  type.py
swarmic_agents/jobber/: jobber.py
tickets/: in-001.md  out-001.md
