# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "swarmic"
version = "0.0.0"
dependencies = [
  "requests",
  "pydantic",
  "types-requests",
]
requires-python = ">=3.12"
authors = [
  {name = "Andrew Owen Martin", email = "andrew@aomartin.co.uk"},
]
maintainers = [
  {name = "Andrew Owen Martin", email = "andrew@aomartin.co.uk"},
]
description = "Swarm of Agents talking though one LLM."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E.*"]
keywords = []
classifiers = [
]

[dependency-groups]
test = ["pytest"]
# gui = ["PyQt5"]
# cli = [
#   "rich",
#   "click",
# ]

# [project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
# Repository = "https://github.com/me/spam.git"
# "Bug Tracker" = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
# 
# [project.scripts]
# spam-cli = "spam:main_cli"
# 
# [project.gui-scripts]
# spam-gui = "spam:main_gui"
# 
# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"
